; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/pci/extr_pci.c_pci_bar_enabled.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/pci/extr_pci.c_pci_bar_enabled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_map = type { i32, i32 }
%struct.pci_devinfo = type { i32 }

@PCIM_BIOS_ENABLE = common dso_local global i32 0, align 4
@PCIR_COMMAND = common dso_local global i32 0, align 4
@PCIM_CMD_MEMEN = common dso_local global i32 0, align 4
@PCIM_CMD_PORTEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pci_bar_enabled(i32 %0, %struct.pci_map* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.pci_map*, align 8
  %6 = alloca %struct.pci_devinfo*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.pci_map* %1, %struct.pci_map** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call %struct.pci_devinfo* @device_get_ivars(i32 %8)
  store %struct.pci_devinfo* %9, %struct.pci_devinfo** %6, align 8
  %10 = load %struct.pci_devinfo*, %struct.pci_devinfo** %6, align 8
  %11 = getelementptr inbounds %struct.pci_devinfo, %struct.pci_devinfo* %10, i32 0, i32 0
  %12 = load %struct.pci_map*, %struct.pci_map** %5, align 8
  %13 = getelementptr inbounds %struct.pci_map, %struct.pci_map* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i64 @PCIR_IS_BIOS(i32* %11, i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %25

17:                                               ; preds = %2
  %18 = load %struct.pci_map*, %struct.pci_map** %5, align 8
  %19 = getelementptr inbounds %struct.pci_map, %struct.pci_map* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @PCIM_BIOS_ENABLE, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %25, label %24

24:                                               ; preds = %17
  store i32 0, i32* %3, align 4
  br label %54

25:                                               ; preds = %17, %2
  %26 = load i32, i32* %4, align 4
  %27 = load i32, i32* @PCIR_COMMAND, align 4
  %28 = call i32 @pci_read_config(i32 %26, i32 %27, i32 2)
  store i32 %28, i32* %7, align 4
  %29 = load %struct.pci_devinfo*, %struct.pci_devinfo** %6, align 8
  %30 = getelementptr inbounds %struct.pci_devinfo, %struct.pci_devinfo* %29, i32 0, i32 0
  %31 = load %struct.pci_map*, %struct.pci_map** %5, align 8
  %32 = getelementptr inbounds %struct.pci_map, %struct.pci_map* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = call i64 @PCIR_IS_BIOS(i32* %30, i32 %33)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %42, label %36

36:                                               ; preds = %25
  %37 = load %struct.pci_map*, %struct.pci_map** %5, align 8
  %38 = getelementptr inbounds %struct.pci_map, %struct.pci_map* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = call i64 @PCI_BAR_MEM(i32 %39)
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %42, label %48

42:                                               ; preds = %36, %25
  %43 = load i32, i32* %7, align 4
  %44 = load i32, i32* @PCIM_CMD_MEMEN, align 4
  %45 = and i32 %43, %44
  %46 = icmp ne i32 %45, 0
  %47 = zext i1 %46 to i32
  store i32 %47, i32* %3, align 4
  br label %54

48:                                               ; preds = %36
  %49 = load i32, i32* %7, align 4
  %50 = load i32, i32* @PCIM_CMD_PORTEN, align 4
  %51 = and i32 %49, %50
  %52 = icmp ne i32 %51, 0
  %53 = zext i1 %52 to i32
  store i32 %53, i32* %3, align 4
  br label %54

54:                                               ; preds = %48, %42, %24
  %55 = load i32, i32* %3, align 4
  ret i32 %55
}

declare dso_local %struct.pci_devinfo* @device_get_ivars(i32) #1

declare dso_local i64 @PCIR_IS_BIOS(i32*, i32) #1

declare dso_local i32 @pci_read_config(i32, i32, i32) #1

declare dso_local i64 @PCI_BAR_MEM(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
